# SwapBatteryApplication

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  main.cpp  main.rc  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui
custom/: home.cpp  home.h
enc_temp_folder/49801f182b8d492991cebae1313941c/: MainWindow.cpp
enc_temp_folder/bde7a7fd85b41ab7d86751e070a478ad/: LoggerManager.h
func/: usart.h
func/comms/: AbstractCommunication.h  Communication.h  SerialCtl.cpp  SerialCtl.h  SerialSetting.cpp  SerialSetting.h
func/comms/abstract/: AbstractCommsSetting.h  AbstractCommunication.h
func/logger/: LogModel.h
interface/pages/: CommsSettingPage.cpp  home.cpp
interface/pages/header/: BatterySetting.h  CommsSettingPage.h
interface/widget/: Logger.h
lib/: elawidgettools.lib  elawidgettoolsd.lib
src/func/comms/: BMSCmdManager.cpp  BMSCmdManager.h  Communication.h  SerialCtl.cpp  SerialCtl.h  SerialSetting.h
src/func/comms/abstract/: AbstractCommsSetting.h  AbstractCommunication.cpp  AbstractCommunication.h
src/func/comms/class/: RDManager.cpp  RDManager.h  RegisterData.cpp  RegisterData.h
src/func/comms/driver/: Communication.h  SerialCtl.cpp  SerialCtl.h  SerialSetting.cpp  SerialSetting.h
src/func/comms/driver/abstract/: AbstractCommunication.cpp  AbstractCommunication.h
src/func/comms/thread/: CommunicationWorker.cpp  CommunicationWorker.h
src/func/logger/: LogModel.cpp  LoggerManager.h
src/func/modbus/: ControllerMaster.cpp  ControllerMaster.h  CustomModbusMaster.cpp  CustomModbusMaster.h  CustomStream.cpp  ModbusMaster.cpp  ModbusMaster.h
src/func/modbus/util/: CustomStream.h  StreamType.cpp  StreamType.h  crc16.h  word.h
src/func/upgrade/: BaseProtocol.cpp  BaseProtocol.h  BaseUpgrade.h  ControlProtocol.cpp  ControlProtocol.h  ControlUpgrade.cpp  ControlUpgrade.h  ProtocolFactory.h  UpgradeFactory.h
src/interface/Model/: BaseModel.h  BatteryOverviewModel.cpp  BatteryOverviewModel.h  BatterySettingsModel.cpp  BatterySettingsModel.h  CurrentProtectModel.cpp  CurrentProtectModel.h  FunctionSettingsModel.cpp  FunctionSettingsModel.h  InverterSettingsModel.cpp  InverterSettingsModel.h  LowSOCSettingsModel.cpp  LowSOCSettingsModel.h  ModelManager.cpp  ModelManager.h  TableViewModel.cpp  TableViewModel.h  TempSettingsModel.cpp  TempSettingsModel.h  VoltageProtectModel.cpp  VoltageProtectModel.h
src/interface/pages/: BMSCalibratePage.cpp  BMSUpdatePage.cpp  BatterySetting.cpp  CommsSettingPage.cpp  ProdectSettingPage.cpp  ProtectSettingPage.cpp  RecordPage.cpp  SettingsPage.cpp  SystemSettingPage.cpp  home.cpp
src/interface/pages/base/: BasePage.cpp  BasePage.h  BaseSetting.h
src/interface/pages/custom/: ParameterSettings.cpp  ParameterSettings.h  ProtectSettings.h
src/interface/pages/header/: BMSCalibratePage.h  BMSUpdatePage.h  BasePage.h  BaseSetting.h  BatterySetting.h  CommsSettingPage.h  ProductSettingPage.h  ProtectSettingPage.h  RecordPage.h  SettingsPage.h  SystemSettingPage.h  home.h
src/interface/widget/: CellAlarmFrame.h  CellDataFrame.h  CellFunctionFrame.h  CellRecordFrame.h  CellSettingFrame.h  CellVoltFrame.h  CycleProgressBar.cpp  CycleProgressBar.h  Logger.cpp  Logger.h  SegmentBatteryAlarmWidget.cpp  SegmentBatteryAlarmWidget.h  SegmentBatteryCellVoltWidget.cpp  SegmentBatteryCellVoltWidget.h  SegmentBatteryFunctionWidget.cpp  SegmentBatteryFunctionWidget.h  SegmentBatteryOverviewWidget.cpp  SegmentBatteryOverviewWidget.h  SettingsBackgroundArea.cpp  SettingsBackgroundArea.h
src/util/: TimerManager.h  Util.c  Util.h  typedef.h
